# asteroid-qmltester

./: CMakeLists.txt  README.md  asteroid-qmltester.desktop.template
i18n/: asteroid-qmltester.ar_AR.ts  asteroid-qmltester.ast.ts  asteroid-qmltester.cs.ts  asteroid-qmltester.da.ts  asteroid-qmltester.de_DE.ts  asteroid-qmltester.desktop.h  asteroid-qmltester.desktop.h.ts  asteroid-qmltester.el.ts  asteroid-qmltester.en_GB.ts  asteroid-qmltester.es.ts  asteroid-qmltester.es_AR.ts  asteroid-qmltester.fa.ts  asteroid-qmltester.fi.ts  asteroid-qmltester.fr.ts  asteroid-qmltester.gl.ts  asteroid-qmltester.he.ts  asteroid-qmltester.hr.ts  asteroid-qmltester.hu.ts  asteroid-qmltester.id.ts  asteroid-qmltester.it.ts  asteroid-qmltester.ja.ts  asteroid-qmltester.ka.ts  asteroid-qmltester.kab.ts  asteroid-qmltester.ko.ts  asteroid-qmltester.lb.ts  asteroid-qmltester.lt.ts  asteroid-qmltester.mr.ts  asteroid-qmltester.ms.ts  asteroid-qmltester.nb_NO.ts  asteroid-qmltester.nl_BE.ts  asteroid-qmltester.nl_NL.ts  asteroid-qmltester.pl.ts  asteroid-qmltester.pt.ts  asteroid-qmltester.pt_BR.ts  asteroid-qmltester.pt_PT.ts  asteroid-qmltester.ro.ts  asteroid-qmltester.ru.ts  asteroid-qmltester.sk.ts  asteroid-qmltester.sv.ts  asteroid-qmltester.te.ts  (+9 more)
src/: CMakeLists.txt  main.qml
